k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cicd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata: 
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: adityashanbhag29/frontend:latest
          ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: cicd
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
