k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-managment-ingress
  namespace: cicd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  
spec:
  ingressclassName: nginx
  rules:
    - host: 29adshni.shop
      http:
        paths:
        - pathType: Prefix
          path: /api
          backend:
            service:
              name: backend-svc
              port: 
                number: 5000
        - pathType: Prefix
          path: /
          backend:  
            service:
              name: frontend-svc
              port:
                number: 80

    - host: www.29adshni.shop
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-svc
              port: 
                number: 5000
        - path: /
          pathType: Prefix
          backend:    
            service:
              name: frontend-svc
              port:
                number: 80

  tls:
    - hosts:
        - 29adshni.shop
        - www.29adshni.shop
      secretName: cicd-tls
